fix: Adjust SkiaSharp template for x:Bind error
WMC1121: Invalid binding assignment : Events can only be bound to non-overloaded methods

--- a/UI/SkiaSharpTest/SkiaSharpTest/SkiaSharpTest.UWP/SkiaSharpTest.UWP.csproj
+++ b/UI/SkiaSharpTest/SkiaSharpTest/SkiaSharpTest.UWP/SkiaSharpTest.UWP.csproj
@@ -22,6 +22,9 @@
     <PackageReference Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" Version="4.1.9" />
   </ItemGroup>
   <PropertyGroup>
+    <SynthesizeLinkMetadata>true</SynthesizeLinkMetadata>
+  </PropertyGroup>
+  <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">x86</Platform>
     <ProjectGuid>{E798BA38-04BF-4085-96ED-DE8C2C0D6AB1}</ProjectGuid>
@@ -31,7 +34,7 @@
     <AssemblyName>SkiaSharpTest</AssemblyName>
     <DefaultLanguage>en-US</DefaultLanguage>
     <TargetPlatformIdentifier>UAP</TargetPlatformIdentifier>
-    <TargetPlatformVersion>10.0.17763.0</TargetPlatformVersion>
+    <TargetPlatformVersion>10.0.18362.0</TargetPlatformVersion>
     <TargetPlatformMinVersion>10.0.16299.0</TargetPlatformMinVersion>
     <MinimumVisualStudioVersion>14</MinimumVisualStudioVersion>
     <FileAlignment>512</FileAlignment>
