--- a/reference/Uno.Extensions.Commerce/Extensions.props
+++ b/reference/Uno.Extensions.Commerce/Extensions.props
@@ -1,14 +1,14 @@
 <Project ToolsVersion="15.0">
 	<ItemGroup>
-		<PackageReference Include="Uno.Extensions.Configuration" Version="2.1.0-dev.173" />
-		<PackageReference Include="Uno.Extensions.Core" Version="2.1.0-dev.173" />
-		<PackageReference Include="Uno.Extensions.Hosting" Version="2.1.0-dev.173" />
-		<PackageReference Include="Uno.Extensions.Http" Version="2.1.0-dev.173" />
-		<PackageReference Include="Uno.Extensions.Logging.Serilog" Version="2.1.0-dev.173" />
-		<PackageReference Include="Uno.Extensions.Navigation" Version="2.1.0-dev.173" />
-		<PackageReference Include="Uno.Extensions.Serialization" Version="2.1.0-dev.173" />
-		<PackageReference Include="Uno.Extensions.Reactive" Version="2.1.0-dev.173" />
-		<PackageReference Include="Uno.Extensions.Reactive.Messaging" Version="2.1.0-dev.173" />
-		<PackageReference Include="Uno.Extensions.Reactive.WinUI" Version="2.1.0-dev.173" />
+		<PackageReference Include="Uno.Extensions.Configuration" Version="2.1.1" />
+		<PackageReference Include="Uno.Extensions.Core" Version="2.1.1" />
+		<PackageReference Include="Uno.Extensions.Hosting" Version="2.1.1" />
+		<PackageReference Include="Uno.Extensions.Http" Version="2.1.1" />
+		<PackageReference Include="Uno.Extensions.Logging.Serilog" Version="2.1.1" />
+		<PackageReference Include="Uno.Extensions.Navigation" Version="2.1.1" />
+		<PackageReference Include="Uno.Extensions.Serialization" Version="2.1.1" />
+		<PackageReference Include="Uno.Extensions.Reactive" Version="2.1.1" />
+		<PackageReference Include="Uno.Extensions.Reactive.Messaging" Version="2.1.1" />
+		<PackageReference Include="Uno.Extensions.Reactive.WinUI" Version="2.1.1" />
 	</ItemGroup>
 </Project>
