--- a/reference/Uno.Extensions.Commerce/Directory.Build.props
+++ b/reference/Uno.Extensions.Commerce/Directory.Build.props
@@ -13,24 +13,28 @@
 	</PropertyGroup>
 
 	<ItemGroup Condition="'$(MSBuildProjectName)' == 'Commerce'">
-		<PackageReference Include="Uno.Extensions.Configuration" Version="2.2.0-dev.118" />
-		<PackageReference Include="Uno.Extensions.Core" Version="2.2.0-dev.118" />
-		<PackageReference Include="Uno.Extensions.Hosting" Version="2.2.0-dev.118" />
-		<PackageReference Include="Uno.Extensions.Http" Version="2.2.0-dev.118" />
-		<PackageReference Include="Uno.Extensions.Logging.Serilog" Version="2.2.0-dev.118" />
-		<PackageReference Include="Uno.Extensions.Navigation" Version="2.2.0-dev.118" />
-		<PackageReference Include="Uno.Extensions.Serialization" Version="2.2.0-dev.118" />
-		<PackageReference Include="Uno.Extensions.Reactive" Version="2.2.0-dev.118" />
-		<PackageReference Include="Uno.Extensions.Reactive.Messaging" Version="2.2.0-dev.118" />
-		<PackageReference Include="Uno.Extensions.Reactive.WinUI" Version="2.2.0-dev.118" />
+		<PackageReference Include="Uno.Extensions.Authentication" Version="2.2.0-dev.162" />
+		<PackageReference Include="Uno.Extensions.Configuration" Version="2.2.0-dev.162" />
+		<PackageReference Include="Uno.Extensions.Core" Version="2.2.0-dev.162" />
+		<PackageReference Include="Uno.Extensions.Hosting" Version="2.2.0-dev.162" />
+		<PackageReference Include="Uno.Extensions.Http" Version="2.2.0-dev.162" />
+		<PackageReference Include="Uno.Extensions.Http.Refit" Version="2.2.0-dev.162" />
+		<PackageReference Include="Uno.Extensions.Logging.Serilog" Version="2.2.0-dev.162" />
+		<PackageReference Include="Uno.Extensions.Navigation" Version="2.2.0-dev.162" />
+		<PackageReference Include="Uno.Extensions.Serialization" Version="2.2.0-dev.162" />
+		<PackageReference Include="Uno.Extensions.Serialization.Refit" Version="2.2.0-dev.162" />
+		<PackageReference Include="Uno.Extensions.Reactive" Version="2.2.0-dev.162" />
+		<PackageReference Include="Uno.Extensions.Reactive.Messaging" Version="2.2.0-dev.162" />
+		<PackageReference Include="Uno.Extensions.Reactive.WinUI" Version="2.2.0-dev.162" />
 	</ItemGroup>
 
 	<ItemGroup Condition="'$(IncludeWinUIExtensions)' == 'true'">
-		<PackageReference Include="Uno.Extensions.Hosting.WinUI" Version="2.2.0-dev.118" />
-		<PackageReference Include="Uno.Extensions.Localization.WinUI" Version="2.2.0-dev.118" />
-		<PackageReference Include="Uno.Extensions.Logging.WinUI" Version="2.2.0-dev.118" />
-		<PackageReference Include="Uno.Extensions.Navigation.Toolkit.WinUI" Version="2.2.0-dev.118" />
-		<PackageReference Include="Uno.Extensions.Navigation.WinUI" Version="2.2.0-dev.118" />
+		<PackageReference Include="Uno.Extensions.Authentication.WinUI" Version="2.2.0-dev.162" />
+		<PackageReference Include="Uno.Extensions.Hosting.WinUI" Version="2.2.0-dev.162" />
+		<PackageReference Include="Uno.Extensions.Localization.WinUI" Version="2.2.0-dev.162" />
+		<PackageReference Include="Uno.Extensions.Logging.WinUI" Version="2.2.0-dev.162" />
+		<PackageReference Include="Uno.Extensions.Navigation.Toolkit.WinUI" Version="2.2.0-dev.162" />
+		<PackageReference Include="Uno.Extensions.Navigation.WinUI" Version="2.2.0-dev.162" />
 	</ItemGroup>
 
 </Project>
