--- a/.vsts-ci.yml
+++ b/.vsts-ci.yml
@@ -32,7 +32,7 @@ jobs:
 
       $SolutionsToBuild =  Get-ChildItem -Path **\*.sln -Recurse  | Where-Object {$_.FullName -notmatch "\\ArchivedProjects\\"}
 
-      $TargetBranch = ($env:System_PullRequest_TargetBranch -eq $null) ? -eq $null : $env:System_PullRequest_TargetBranch;
+      if($env:System_PullRequest_TargetBranch -eq $null) { $TargetBranch = "master" } else { $TargetBranch = $env:System_PullRequest_TargetBranch; }
 
       foreach ($SolutionName in $SolutionsToBuild) {
 
