--- a/UI/WebRTC/WebRTC.SignalingServer/WebRTC.SignalingServer.csproj
+++ b/UI/WebRTC/WebRTC.SignalingServer/WebRTC.SignalingServer.csproj
@@ -7,6 +7,7 @@
 
 	<ItemGroup>
 		<PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
+		<PackageReference Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" Version="4.5.12" />
 	</ItemGroup>
 
 	<Import Project="..\WebRTC.Entities\WebRTC.Entities.projitems" Label="Shared" />
