--- a/UI/WCTDataTreeTabSample/WCTDataTreeTabSample/WCTDataTreeTabSample.Wasm/WCTDataTreeTabSample.Wasm.csproj
+++ b/UI/WCTDataTreeTabSample/WCTDataTreeTabSample/WCTDataTreeTabSample.Wasm/WCTDataTreeTabSample.Wasm.csproj
@@ -36,19 +36,20 @@
     <None Include="wwwroot\web.config" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Uno.Material" Version="1.3.1" />
-    <PackageReference Include="Uno.Toolkit.UI" Version="1.3.0" />
-	<PackageReference Include="Uno.Toolkit.UI.Material" Version="1.3.0" />
+    <PackageReference Include="Uno.ColorCode.Core" Version="2.1.0-uno.4" />
+    <PackageReference Include="Uno.Material" Version="2.3.0" />
+    <PackageReference Include="Uno.Toolkit.UI" Version="2.3.0" />
+	<PackageReference Include="Uno.Toolkit.UI.Material" Version="2.3.0" />
     <PackageReference Include="Uno.Microsoft.Toolkit.Uwp.UI.Controls" Version="7.1.11" />
     <PackageReference Include="Uno.Microsoft.Toolkit.Uwp.UI.Controls.DataGrid" Version="7.1.11" />
-    <PackageReference Include="Microsoft.Windows.Compatibility" Version="5.0.1" />
-    <PackageReference Include="Microsoft.Extensions.Logging" Version="5.0.0" />
-    <PackageReference Include="Uno.Extensions.Logging.WebAssembly.Console" Version="1.0.1" />
-    <PackageReference Include="Uno.UI.WebAssembly" Version="4.1.9" />
-    <PackageReference Include="Uno.UI.RemoteControl" Version="4.1.9" Condition="'$(Configuration)'=='Debug'" />
-    <PackageReference Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" Version="4.1.9" />
-    <PackageReference Include="Uno.Wasm.Bootstrap" Version="3.2.0" />
-    <PackageReference Include="Uno.Wasm.Bootstrap.DevServer" Version="3.2.0" />
+    <PackageReference Include="Microsoft.Windows.Compatibility" Version="6.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Logging" Version="6.0.0" />
+    <PackageReference Include="Uno.Extensions.Logging.WebAssembly.Console" Version="1.4.0" />
+    <PackageReference Include="Uno.UI.WebAssembly" Version="4.5.12" />
+    <PackageReference Include="Uno.UI.RemoteControl" Version="4.5.12" Condition="'$(Configuration)'=='Debug'" />
+    <PackageReference Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" Version="4.5.12" />
+    <PackageReference Include="Uno.Wasm.Bootstrap" Version="3.3.1" />
+    <PackageReference Include="Uno.Wasm.Bootstrap.DevServer" Version="3.3.1" />
   </ItemGroup>
   <Import Project="..\WCTDataTreeTabSample.Shared\WCTDataTreeTabSample.Shared.projitems" Label="Shared" Condition="Exists('..\WCTDataTreeTabSample.Shared\WCTDataTreeTabSample.Shared.projitems')" />
 </Project>
